# cogsimexperiment

./: .gitignore  CLAUDE.md  README.md  demo.ipynb  pyproject.toml  remote_inference.ipynb
.kiro/specs/cognitive-similarity/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: evidence-based-development.md  product.md  structure.md  tech.md
cognitive_similarity/: __init__.py  cache.py  collapsing.py  facade.py  ica_atlas.py  models.py  neurosynth_labels.py  paper_replication.py  similarity_engine.py  stimulus_runner.py  validation.py
scripts/: fetch_neurosynth_maps.py  ibc_exemplars.py  replicate_figure_4e.py  run_inference_modal.py  validate_ibc.py
tests/: test_cache.py  test_collapsing.py  test_facade.py  test_ica_atlas.py  test_models.py  test_neurosynth_labels.py  test_paper_replication.py  test_similarity_engine.py
