[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cognitive-similarity"
version = "0.1.0"
description = "Brain-grounded stimulus similarity using TRIBE v2"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "nilearn>=0.10",
    "hypothesis>=6.100",
    "pytest>=8.0",
    # tribev2 is not on PyPI — install from GitHub:
    # pip install git+https://github.com/facebookresearch/tribev2.git
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
