[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cognitive-similarity"
version = "0.1.0"
description = "Brain-grounded stimulus similarity using TRIBE v2"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<2.1",  # <2.1 for numba compatibility
    "scikit-learn>=1.4",
    "nilearn>=0.10",
    "pandas>=2.0",  # Required by nilearn and collapsing.py
    "requests>=2.31",  # Required for downloading IBC stimuli
    # tribev2 is not on PyPI — install from GitHub:
    # pip install git+https://github.com/facebookresearch/tribev2.git
]

[project.optional-dependencies]
inference = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "huggingface-hub>=0.20",
    "transformers>=4.30",
]

[project.optional-dependencies]
inference = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "huggingface-hub>=0.20",
    "transformers>=4.30",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
